[project]
name = "ahn_cli"
version = "0.2.1"
description = "AHN CLI for downloading Dutch elevation point cloud data"
authors = [{ name = "HideBa", email = "baba.papa1120.ba@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "click>=8.2.0",
    "geopandas>=1.1.0",
    "shapely>=2.1.0",
    "laspy[lazrs]>=2.6.0",
    "requests>=2.32.0",
    "rasterio>=1.4.0",
    "tqdm>=4.67.0",
    "polyscope>=2.4.0",
]

[project.scripts]
ahn_cli = "ahn_cli.main:main"

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "types-requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["ahn_cli/**/*.py", "ahn_cli/**/*.geojson", "README.md", "LICENSE"]

[tool.black]
line-length = 78
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''


[tool.mypy]
files = ["ahn_cli/**/*.py"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_subclassing_any = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ahn_cli", "ahn_cli.*"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "types-requests>=2.32.4.20250611",
]
