[project]
name = "ahn_cli"
version = "0.3.5"
description = "AHN CLI for downloading Dutch elevation point cloud data"
authors = [{ name = "HideBa", email = "baba.papa1120.ba@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "click>=8.2.0",
    "geopandas>=1.1.0",
    "shapely>=2.1.0",
    "laspy[lazrs]>=2.6.0",
    "requests>=2.32.0",
    "rasterio>=1.4.0",
    "tqdm>=4.67.0",
    "polyscope>=2.4.0",
    "typing-extensions>=4.14.1",
]

[project.scripts]
ahn_cli = "ahn_cli.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["ahn_cli/**/*.py", "ahn_cli/**/*.geojson", "README.md", "LICENSE"]

# Ruff configuration
[tool.ruff]
line-length = 78
target-version = "py310"

[tool.ruff.lint]
# Enable flake8-style linting plus additional rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by line-length)
]

[tool.ruff.lint.isort]
known-first-party = ["ahn_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
    "typos>=1.34.0",
]
